--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 	<meta charset="utf-8">
+	<title>Marble</title>
 	<link href="styles/pj4.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700,400' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:700,400' rel='stylesheet' type='text/css'>
@@ -122,7 +123,7 @@
 						<p>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna.</p>
 						<p class = "address">Moonshine Street No: 14/05<br>Light City, Jupiter</p>
 						<p class = "phone">0247 541 65 87</p>
-						<p class = "email"><a a href="mailto:support@longwave.com" target="_top">support@longwave.com</a></p>
+						<p class = "email"><a a href="mailto:support@longwave.com">support@longwave.com</a></p>
 					</div>	
 					<div class = "twitter-feed footer-item">
 						<h4>Twitter</h4>
@@ -132,15 +133,18 @@
 					</div>
 					<div class = "popular-posts footer-item">
 						<h4>Popular posts</h4>
-						<a href = "#"><p>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.<br></a>
+						<a href = "#"><p>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.<br>
 							<time>14 Nov, 2012</time>
 						</p>
-						<a href = "#"><p>Scelerisque nisl consectetur et.<br></a>
+						</a>
+						<a href = "#"><p>Scelerisque nisl consectetur et.<br>
 							<time>22 May, 2012</time>
 						</p>
-						<a href = "#"><p>Pellentesque ornare sem lacinia quam venenatis vestibulum.<br></a>
+						</a>
+						<a href = "#"><p>Pellentesque ornare sem lacinia quam venenatis vestibulum.<br>
 							<time>15 July, 2012</time>
 						</p>
+						</a>
 					</div>
 					<div class = "about-us footer-item">
 						<h4>About us</h4>
