--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<p>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna.</p>
 						<p class = "address">Moonshine Street No: 14/05<br>Light City, Jupiter</p>
 						<p class = "phone">0247 541 65 87</p>
-						<p class = "email"><a a href="mailto:support@longwave.com">support@longwave.com</a></p>
+						<p class = "email"><a href="mailto:support@longwave.com">support@longwave.com</a></p>
 					</div>	
 					<div class = "twitter-feed footer-item">
 						<h4>Twitter</h4>
@@ -134,15 +134,15 @@
 					<div class = "popular-posts footer-item">
 						<h4>Popular posts</h4>
 						<a href = "#"><p>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.<br>
-							<time>14 Nov, 2012</time>
+							<time>2012-11-14</time>
 						</p>
 						</a>
 						<a href = "#"><p>Scelerisque nisl consectetur et.<br>
-							<time>22 May, 2012</time>
+							<time>2012-05-22</time>
 						</p>
 						</a>
 						<a href = "#"><p>Pellentesque ornare sem lacinia quam venenatis vestibulum.<br>
-							<time>15 July, 2012</time>
+							<time>2012-08-15</time>
 						</p>
 						</a>
 					</div>
